--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name : RAG CI Pipeline
 
 on : 
   push :
-    branches : [ "main" ]
+    branches : [ "master" ]
   pull_request :
-    branches : [ "main" ]
+    branches : [ "master" ]
 
 jobs :
   rag-validation :
@@ -22,7 +22,7 @@ jobs :
     - name : Install dependencies
       run : |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt
     
     - name: Start MLflow UI (background)
       run: |
