--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,10 @@ jobs :
 
     - name: Start FastAPI server
       run: |
+
+        export CI=true
         python -m uvicorn serverrag:app --host 0.0.0.0 --port 8000 &
+        
         echo "Waiting for FastAPI to be ready..."
         for i in {1..30}; do
           if curl -s http://127.0.0.1:8000/health; then
